--- a/public/app/angular-smilies/package.json
+++ b/public/app/angular-smilies/package.json
@@ -8,6 +8,7 @@
   "description": "AngularJS filter & directive for smilies parsing",
   "devDependencies": {
     "grunt" : "~0.4.1",
+    "grunt-cli" : "*",
     "underscore": "^1.8.0",
     "grunt-contrib-uglify": "^0.9.0",
     "grunt-contrib-cssmin": "^0.12.0",
